[WebAudio/WebM] Incorrect number of frames returned if decoding frame rate doesn't match original https://bugs.webkit.org/show_bug.cgi?id=229251 rdar://problem/82095650

Source/WebCore:

Reviewed by Eric Carlson..

We can't rely on CoreMedia to performed the trimming correctly when resampling is also to be done.
It gives unexpected results. Let's do it ourselves instead.
Test: webaudio/decode-audio-data-webm-opus-resample.html

* platform/audio/cocoa/AudioFileReaderCocoa.cpp:
(WebCore::AudioFileReader::decodeWebMData const):

LayoutTests:

Reviewed by Eric Carlson.

* webaudio/decode-audio-data-webm-opus-resample-expected.txt: Added.
* webaudio/decode-audio-data-webm-opus-resample.html: Added.


Canonical link: https://commits.webkit.org/241483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282196 268f45cc-cd09-0410-ab3c-d52691b4dbfc